add an IDocumentController::DocumentActivation flag to control adding documents to the "Files/Open Recent" menu and use it in the patchreview plugin to prevent pollution of said menu. DocumentController::activateDocument() no longer adds the target document to the Open Recent menu; use DocumentController::openDocument() for that. Additionally, the patch review plugin now handles the hardwired maximum number of files to open (15) correctly, instead of opening no files when that maximum is exceeded.

REVIEW: 129231
BUG: 371210